--- a/CSS/css-examples.html
+++ b/CSS/css-examples.html
@@ -3,30 +3,50 @@
 
 <head>
     <title>CSS Examples</title>
-    <h1>CSS Examples</h1>
+    <h1>CSS EXAMPLES</h1>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <style>
-        #p1 {
-            color:red;
-            background-color: yellow;
-        }
-
-        a:hover {
-            color:pink
-        }
-    </style>
+    <link rel="stylesheet" href="css-examples.css">
 </head>
 
 <body>
-    <p id="p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe impedit blanditiis non fugit soluta rem
-        architecto deserunt tempora excepturi ratione tempore in quibusdam ducimus dicta veritatis, dolores ad nulla
-        labore facere culpa qui voluptatem rerum unde? Sed, aspernatur reprehenderit facilis cum modi accusamus incidunt
-        earum. Nam suscipit dolores qui excepturi.</p>
+    <h2>Pseudo Elements</h2>
+    
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam cumque quaerat illo, rerum voluptatum
+        consectetur asperiores doloremque temporibus accusamus velit adipisci sint officiis quidem quas veritatis unde
+        architecto mollitia quibusdam. Accusamus incidunt ea ipsum, asperiores adipisci vel tempora sequi repellat, enim
+        delectus excepturi aliquid aliquam consequatur ab sed omnis expedita.
+    </p>
 
-    <a href="">google</a>
+    <p class="ikinciparagraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro natus corporis, et
+        temporibus voluptatum dolores, rerum atque sapiente repellendus voluptates modi velit! Dolorum ipsum deleniti
+        cumque a rerum aspernatur ratione excepturi illo, nam laborum ullam magni consequatur neque praesentium maxime
+        atque commodi! Non ut facilis pariatur architecto iure animi nesciunt!
+    </p>
+
+    <h2>Pseudo Classes</h2>
+
+    <a class="pseudolink" href="example">a:link</a>
+    <a class="pseudolink" href="example">a:hover</a>
+    <a class="pseudolink" href="https://www.google.com.tr">a:active</a>
+    <a class="pseudolink" href="https://www.google.com.tr">a:visited</a>
+    <br><br><br>
+
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, molestiae. <br>
+        <span id="spangizleme">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, alias. </span>
+    </div><br>
+
+    <ul class="listexample">
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, ipsum?</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, ipsum?</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, ipsum?</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, ipsum?</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, ipsum?</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, ipsum?</li>
+    </ul>
+
 </body>
 
 <footer>
